# AutoWordle

./: CMakeLists.txt  README.md
assets/: small_allowed_words.txt  small_solution_words.txt
src/: MatchStatus.cpp  MatchStatus.hpp  Tree.hpp  Word.cpp  Word.hpp  array_helper.hpp  enum.hpp  main.cpp  main.hpp  solver.cpp  solver.hpp
